--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -15,8 +15,33 @@ li {
 
 /* Projects Column Styles */
 .projCol {
-    background-color: blue;
+    display: flex;
+    justify-content: center;
+    background-color: rgb(184, 184, 248);
     width: 75vw;
+    padding-top: 3vh;
+}
+.projColContent {
+    width: 50vw;
+    height: 97vh;
+    background-color: aliceblue;
+    display: flex;
+    justify-content: center;
+}
+.projNav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: aliceblue;
+
+}
+.navButton {
+    height: fit-content;
+    margin: 1vw 2vh; 
+    background-color: aliceblue;
+    border: none;
+    text-decoration: underline;
+    font-size: 1.3em;
 }
 
 
@@ -29,7 +54,7 @@ li {
     justify-content: center;
 }
 .devColContent {
-    margin: 1vw;
+    margin: 3vh;
     border: 2px black solid;
 }
 .devContentTop {
